kubernetes/manifests/ingress/flask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-flaskapp
  labels:
    app.kubernetes.io/name: myingress-flaskapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: flaskapp
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flaskapp
            port: 
              number: 80
